<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/start_activity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:text="@string/start_activity_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/start_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_activity_button"
        app:layout_constraintTop_toBottomOf="@id/start_activity_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/get_contact_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/get_contact_text"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@id/start_activity_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/get_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_contact_button"
        app:layout_constraintTop_toBottomOf="@id/get_contact_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/create_periodic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_periodic_text"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@id/get_contact_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/create_periodic_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_periodic_button"
        app:layout_constraintTop_toBottomOf="@id/create_periodic_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/turn_network_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/turn_network_text"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@id/create_periodic_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/turn_network_broadcast_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn_network_broadcast"
        app:layout_constraintTop_toBottomOf="@id/turn_network_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/fragment_with_gyroscope_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:text="@string/fragment_with_gyroscope_text"
        app:layout_constraintTop_toBottomOf="@id/turn_network_broadcast_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/fragment_with_gyroscope_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_with_gyroscope"
        app:layout_constraintTop_toBottomOf="@id/fragment_with_gyroscope_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/about_permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:text="@string/about_permissions"
        app:layout_constraintTop_toBottomOf="@id/fragment_with_gyroscope_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>